# Feedback-Integrator

./: .gitignore
Kepler_C++/: CMakeLists.txt  main.cpp  main_time_comparison.cpp  plot_cpu_time.sh  plot_errors.sh  plot_trajectories.sh  run_main.sh
Kepler_C++/include/: basic_operations.h  euler_feedback.cpp  euler_feedback.h  euler_feedback_adaptive.cpp  euler_feedback_adaptive.h  euler_feedback_adaptive_light.cpp  euler_feedback_adaptive_light.h  euler_vanilla.cpp  euler_vanilla.h  getError.cpp  getError.h  stormer_verlet_B.cpp  stormer_verlet_B.h
Kepler_C++/plotters/: plot_cpu_time.py  plot_errors_loglog.py  plot_trajectories.py
Perturbed_Kepler_C++/: CMakeLists.txt  main.cpp  plot_cpu_time.sh  plot_errors.sh  plot_trajectories.sh  run_main.sh  sp  spherical_pendulum_bench.cpp
Perturbed_Kepler_C++/include/: basic_operations.cpp  csv_io.cpp  csv_io.h  dynamics_perturbed_kepler.h  estimateL.cpp  estimateL.h  euler_feedback.cpp  euler_feedback.h  euler_feedback_adaptive.cpp  euler_feedback_adaptive_light.cpp  euler_feedback_adaptive_light.h  euler_vanilla.cpp  euler_vanilla.h  getError.cpp  getError.h  getL0E0.h  linspace.cpp  linspace.h  stormer_verlet_B.cpp  stormer_verlet_B.h
Perturbed_Kepler_C++/plotters/: plot_cpu_time.py  plot_errors_loglog.py  plot_trajectories.py
Rigid_Motion_C++/: CMakeLists.txt  main.cpp  main_legacy.cpp  plot_cpu_time.sh  plot_errors.sh  plot_trajectories.sh  run_main.sh
Rigid_Motion_C++/include/: basic_operations.cpp  basic_operations.h  csv_io.h  getError.h
Rigid_Motion_C++/plotters/: plot_cpu_time.py  plot_errors_loglog.py  plot_trajectories.py
(+11 files in other folders)
